# tasks-api

./: .env.example  .gitignore  app.py  docker-compose.yml  pyproject.toml
alembic/: env.py
bot/: .env.example  Dockerfile  app.py  pyproject.toml
bot/bot/: main.py
bot/bot/core/: config.py
bot/bot/database/: connection.py  orm_models.py
bot/bot/handlers/: callback.py  commands.py  messages.py
bot/bot/keyboards/: inline.py
bot/bot/messages/: auth.py  common.py  folders.py  tasks.py
bot/bot/states/: folder_states.py  task_states.py  user_states.py
bot/bot/utils/: api_client.py  auth_storage.py  env_config.py  helpers.py  logger.py
docs/: README.md
tasks_api/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
tasks_api/alembic/: env.py
tasks_api/core/: config.py
tasks_api/database/: connection.py  models.py  orm_models.py
tasks_api/models/: schemas.py  task.py  user.py  user_login.py  user_register.py
tasks_api/repositories/: database.sql  orm_task_repository.py  tasks_repository.py  user_repository.py
tasks_api/services/: auth_service.py  user_service.py
tasks_api/tasks_api/: main.py
tasks_api/tests/: run_tests.py  test_alembic_migrations.py  test_auth_service.py  test_env_config.py  test_orm_repositories.py  test_tasks_api.py  test_user_service.py
tasks_api/utils/: check_database.py  connection.py  env_config.py  execute_query.py  jwt.py  logger.py  response_factory.py  (+1 more)
tests/: test_alembic_migrations.py  test_auth_service.py  test_env_config.py  test_orm_repositories.py  test_tasks_api.py  test_user_service.py
(+19 files in other folders)
